Update styling to make small font more readable. Fix html text on new peep page

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,6 @@
 * {
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     text-align: center;
-    text-shadow: 2px 2px black;
     font-weight: bold;
     color: deeppink;
 }
@@ -12,15 +11,23 @@ body {
 
 h1 {
     font-size: 92;
+    text-shadow: 2px 2px black;
 }
 
 h2 {
     font-size: 60;
+    text-shadow: 2px 2px black;
 }
 
 p {
     font-size: 30px;
+    text-shadow: 1px 1px black;
 }
+
+label {
+    text-shadow: 1px 1px black;
+}
+
 
 .peep-container {
     width: 45%;
